--- a/New DTAPP/Views/Spills/Delete.cshtml
+++ b/New DTAPP/Views/Spills/Delete.cshtml
@@ -11,7 +11,7 @@
     <div class="col-5">
         <div class="mb-3">
             <label asp-for="TransferId" class="fw-bold form-label">Transfer Request</label>
-            <a class="form-control btn btn-primary" target="_blank" asp-controller="Transfers" asp-action="Details" asp-route-id="@Model.TransferId" title="Open the Transfer in a new tab">
+            <a class="form-control btn btn-primary" asp-controller="Transfers" asp-action="Details" asp-route-id="@Model.TransferId" title="Open the Transfer in a new tab">
                 View Transfer <img id="testing" style="vertical-align:text-top!important;margin-left:5px!important;" src="~/images/box-arrow-up-right.svg" alt="Link to Transfer Image" height="20" width="20" />
             </a>
         </div>
